[package]
name = "windows_sleep"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"

[dependencies.windows]
version = "0.25.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Media_Multimedia",
]
